# RangeModeQueries

./: README.md
Nv1/: CMakeLists.txt  main.cpp
Nv2/: CMakeLists.txt  main.cpp
PST/: ApproxMode_PST.cpp  ApproxMode_PST.h  CMakeLists.txt  adds.h  main.cpp
PST/adds/: ptree.c  ptree.h
Sample^c/: ApproxMode_Sample_Compressed.cpp  ApproxMode_Sample_Compressed.h  CMakeLists.txt  main.cpp
Sample^p/: ApproxMode_Sample_Plain.cpp  ApproxMode_Sample_Plain.h  CMakeLists.txt  main.cpp
Simple/: ApproxMode_Simple.cpp  ApproxMode_Simple.h  CMakeLists.txt  main.cpp
Sqrt/: CMakeLists.txt  ExactMode_Sqrt.cpp  ExactMode_Sqrt.h  main.cpp
Subsr1^c/: CMakeLists.txt  ExactMode_Subsr1_Compressed.cpp  ExactMode_Subsr1_Compressed.h  main.cpp
Subsr1^p/: CMakeLists.txt  ExactMode_Subsr1_Plain.cpp  ExactMode_Subsr1_Plain.h  main.cpp
Subsr2^c/: CMakeLists.txt  ExactMode_Subsr2_Compressed.cpp  ExactMode_Subsr2_Compressed.h  main.cpp
Subsr2^p/: CMakeLists.txt  ExactMode_Subsr2_Plain.cpp  ExactMode_Subsr2_Plain.h  main.cpp
Succ^c/: ApproxMode_Succ_Compressed.cpp  ApproxMode_Succ_Compressed.h  CMakeLists.txt  main.cpp
Succ^p/: ApproxMode_Succ_Plain.cpp  ApproxMode_Succ_Plain.h  CMakeLists.txt  main.cpp
Supsr/: CMakeLists.txt  ExactMode_Supsr.cpp  ExactMode_Supsr.h  main.cpp
Test/: CMakeLists.txt  main.cpp
Tri/: ApproxMode_Tri.cpp  ApproxMode_Tri.h  CMakeLists.txt  main.cpp
